--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "papaparse": "~4.1.1",
     "underscore": "~1.8.3",
     "highcharts-release": "~4.1.7",
-    "knockout-postbox": "~0.5.2"
+    "knockout-postbox": "~0.5.2",
+    "jquery-ui": "~1.11.4",
+    "knockout-jqueryui": "~2.2.2"
   },
   "resolutions": {
     "knockout": "~3.3.0-alpha"
