--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "highcharts-release": "~4.1.7",
     "knockout-postbox": "~0.5.2",
     "jquery-ui": "~1.11.4",
-    "knockout-jqueryui": "~2.2.2"
+    "knockout-jqueryui": "~2.2.2",
+    "jqueryui-touch-punch": "*"
   },
   "resolutions": {
     "knockout": "~3.3.0-alpha"
