--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "knockout-postbox": "~0.5.2",
     "jquery-ui": "~1.11.4",
     "knockout-jqueryui": "~2.2.2",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "lodash": "~3.10.0"
   },
   "resolutions": {
     "knockout": "~3.3.0-alpha"
